[package]
name = "guessing_game"
authors = ["Brian Obot"]
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[[bin]]
name = "Result_type"
path = "src/error_handling_process/result_type.rs"

[[bin]]
name = "2c_Const"
path = "src/bin/2c_const.rs"

[[bin]]
name = "Conditional_compilation"
path = "src/bin/conditional_compilation.rs"

[[bin]]
name = "Attributes"
path = "src/bin/attributes.rs"