[package]
name = "guessing_game"
authors = ["Brian Obot"]
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
features = "0.10.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
tokio = { version = "1.43.0", features = ["full"] }


[[bin]]
name = "Result_type"
path = "src/error_handling_process/0_result_type.rs"

[[bin]]
name = "Result_type_part_2"
path = "src/error_handling_process/1_error_handling_with_try_catch_and_map_error.rs"
